# snapline-hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.server.json  vitest.config.ts
.github/workflows/: pages.yml  publish.yml
docs/: CNAME  README.md  api-reference.html  architecture.html  deployment.html  embedding.html  getting-started.html  guide.html  index.html  installation.html  integration.html  security-rbac.html  storage-adapters.html
docs/assets/: style.css
python/: README.md  pyproject.toml
python/snapline_hub/: __init__.py  client.py  rbac.py
scripts/: seed-demos.ts  sync-versions.mjs
server/: admin-routes.ts  api.test.ts  auth.ts  db.ts  index.ts  middleware.ts  routes.ts
server/rbac/: factory.ts  sqlite.ts  store.ts
server/storage/: custom-adapter.example.ts  factory.ts  postgres-adapter.ts  query.ts  schema.ts  sqlite-adapter.ts  types.ts  validation.ts
shared/: types.d.ts  types.js  types.ts
web/: index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx  HubApp.tsx  api.ts  main.tsx  styles.css
web/src/components/: ActiveFilterChips.tsx  PreferencesPanel.tsx  ProjectCard.tsx  ReportFiltersPanel.tsx  Sidebar.tsx
web/src/components/charts/: DonutChart.tsx  TrendChart.tsx
web/src/context/: AuthContext.tsx
web/src/hooks/: useDebouncedValue.ts  usePageTitle.ts  usePreferences.ts
web/src/lib/: dashboard-stats.ts  hub-client.ts
web/src/pages/: DashboardPage.tsx  ReportDetailPage.tsx  ReportsPage.tsx  SettingsPage.tsx  UploadPage.tsx
web/src/styles/: dashboard.css
(+6 files in other folders)
