[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapline-hub"
version = "0.2.4"
description = "Python client for Snapline Hub reporting API with RBAC headers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VaagaTech", email = "info@vaagatech.com" }]
keywords = ["snapline", "testing", "reporting", "hub", "rbac"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://vaagatech.github.io/snapline-hub/"
Repository = "https://github.com/vaagatech/snapline-hub"

[tool.hatch.build.targets.wheel]
packages = ["snapline_hub"]
